--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
                 <img src="img/logo.png" alt="CARA">
                 <div class="menu">
                     <ul id="menu">
-                        <li><a href="">Home</a></li>
-                        <li><a href="">Shop</a></li>
-                        <li><a href="">Blog</a></li>
-                        <li><a href="">About</a></li>
-                        <li><a href="">Contact</a></li>
+                        <li><a href="index.html">Home</a></li>
+                        <li><a href="shop.html">Shop</a></li>
+                        <li><a href="blog.html">Blog</a></li>
+                        <li><a href="about.html">About</a></li>
+                        <li><a href="contact.html">Contact</a></li>
                         <li><a href=""><i class="ri-shopping-bag-line"></i></a></li>
                         <a href="" id="close"><i class="ri-close-line"></i></a>
                     </ul>
